# song-classifier

./: .gitignore  CLAUDE.md  LICENSE.md  README.md  ai_metadata.py  data.py  file_metadata.py  file_transport.py  main.py  models.py  pyproject.toml  requirements.txt  ui_confirm.py
.github/: CODEOWNERS
.github/workflows/: lint.yaml  test.yaml
data/: albums.csv  metadata.csv
src/: cli.py  main.py
src/data/: __init__.py  models.py
src/utils/: ai_metadata.py  config.py  constants.py  file_metadata.py  file_transport.py  git_sync.py  logging.py  ui_confirm.py
tests/: __init__.py  conftest.py  test_ai_metadata.py  test_data.py  test_file_transport.py  test_integration.py  test_models.py
